# NoriV2

./: .gitignore  CMakeConfig.txt  CMakeLists.txt  README.md
include/nori/: HSWrapper.h  areaLight.h  base64.h  bbox.h  bitmap.h  bsdf.h  bumpTexture.h  color.h  common.h  emitter.h  integrator.h  kdtree.h  medium.h  mesh.h  metalConsts.h  microfacet.h  mixBumpmap.h  mixTexture.h  object.h  perlinTexture.h  phaseFunction.h  photon.h  sampler.h  scene.h  texture.h  volume.h  warp.h
python/: BSDFFourier.py  FINAL.py  HGFourier.py  aluminium.py  aluminiumLL.bsdf  copper.py  copperLL.bsdf  diffuse.bsdf  filon.py  fourierBasic.py  frame.py  gaussLobatto.py  imgComp.py  layer.py  microfacet.py  my_microfacetstuff.py  ourOutput.bsdf  ourOutputAluminium.bsdf  ourOutputCopper.bsdf  rDielectricLL.bsdf  roughDielectric.py  test.py  testAddingEqn.py  testGausLobatto.py  testLayer.py  testMicrofacetfAll.py  testMicrofacetfErrorPlot.py  testMicrofacetfRem.py
scenes/conductor/: cbox_path_mats.xml  cbox_path_mis.xml
src/BSDFs/: conductor.cpp  dielectric.cpp  microfacet.cpp  microfacetBRDF.cpp  mirror.cpp  roughconductor.cpp  roughdielectric.cpp
src/Cameras/: thinlens.cpp
src/Core/: base64.cpp  bitmap.cpp  bvh.cpp  common.cpp  main.cpp  mesh.cpp  parser.cpp  scene.cpp
src/Emitters/: areaLight.cpp  diskLight.cpp  envMapEmitter.cpp  pointLight.cpp  spotLight.cpp  textureEmitter.cpp
src/Integrators/: VPTWithShadowRays.cpp  avgVisibility.cpp  basicMediumPathTracer.cpp  basicVolumentricPathTracer.cpp  beamRESurfKNN.cpp  beamRadianceEstimate.cpp  direct.cpp  direct_ems.cpp  direct_mats.cpp  direct_mis.cpp  emissionIntegrator.cpp  normals.cpp  path_mats.cpp  path_mis.cpp  photonmapper.cpp  testtexture.cpp  testtexturePath.cpp  testtexturePhoton.cpp  volumetricPhotonmapper.cpp
src/Medium/: homogeneous.cpp
src/Sampler/: independent.cpp
src/Texture/: imageTexture.cpp  mixBumpmap.cpp  mixTexture.cpp  perlinTexture.cpp  singleBumpTexture.cpp
src/Volumes/: homogeneousVolumeDensity.cpp
src/Warp/: HSWrapper.cpp  HenyeyGreenstein.cpp  Schlick.cpp  warp.cpp  warptest.cpp
